# aranova

./: .env  README.md
.history/aranova-frontend/src/: App_20260625151722.tsx  App_20260628205948.tsx  App_20260628205951.tsx  App_20260628205956.tsx  main_20260627000716.tsx  main_20260628213319.tsx  main_20260628213320.tsx  main_20260628213345.tsx
.history/aranova-frontend/src/contexts/: AuthContext_20260626235427.tsx  AuthContext_20260628201016.tsx  AuthContext_20260628213234.tsx  AuthContext_20260628213530.tsx
.history/aranova-frontend/src/firebase/: config_20260626235248.ts  config_20260626235341.ts
.history/aranova-frontend/src/pages/: Auth_20260624062023.tsx  Auth_20260626235436.tsx  Auth_20260627000017.tsx  Auth_20260627000020.tsx  Auth_20260627001133.tsx  Auth_20260627001454.tsx  Auth_20260627002111.tsx  Auth_20260627002956.tsx  Auth_20260627003531.tsx  Auth_20260627003544.tsx  Auth_20260627003552.tsx  Auth_20260627200343.tsx  Auth_20260627201008.tsx  Auth_20260627201300.tsx  Auth_20260627210723.tsx  Auth_20260627212312.tsx  Auth_20260627212534.tsx  Auth_20260627212544.tsx  Auth_20260627212727.tsx  Auth_20260627212744.tsx  Auth_20260627214159.tsx  Auth_20260628025409.tsx  Auth_20260628025650.tsx  Auth_20260628025944.tsx  Auth_20260628161643.tsx  Auth_20260628162227.tsx  Auth_20260628162517.tsx  (+26 more)
aranova-frontend/: .env  gg  index.html  package-lock.json  package.json  tailwind.config.js
aranova-frontend/src/: App.css  index.css
aranova-frontend/src/pages/: Landingpage.tsx
contracts/aranova/: Cargo.toml
contracts/aranova/src/: lib.rs  test.rs
(+116 files in other folders)
